--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cva": "^0.0.0",
+    "date-fns": "^2.30.0",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
